--- a/01-final-project-db-build-push-image.yml
+++ b/01-final-project-db-build-push-image.yml
@@ -20,3 +20,4 @@ stages:
         repository: 'proasacio/final-project-db'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
+        tags: 'latest'
