Update 01-final-project-db-build-push-image.yml for Azure Pipelines

--- a/01-final-project-db-build-push-image.yml
+++ b/01-final-project-db-build-push-image.yml
@@ -21,3 +21,30 @@ stages:
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: 'latest'
+
+- stage: Deploy
+  displayName: Deploy to server
+  dependsOn: Build
+  jobs:
+  - job: Deploy
+    displayName: Deploy
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - task: DownloadSecureFile@1
+      name: downloadSSHKey
+      inputs:
+        secureFile: 'default-ec2.pem'
+      
+    - script: |
+        echo "Setting permissions for SSH key"
+        chmod 400 $(Agent.TempDirectory)/default-ec2.pem
+        echo "SSH-ing into server"
+        ssh -o StrictHostKeyChecking=no -i $(Agent.TempDirectory)/default-ec2.pem ec2-user@ec2-54-236-25-144.compute-1.amazonaws.com /bin/bash <<'EOT'
+        echo "These commands will be run on: $( uname -a )"
+        cd /home/ec2-user/ansible
+        echo "Current directory: $(pwd)"
+        ansible-playbook playbooks/docker-run.yml
+        exit
+        EOT
+      displayName: 'SSH into Server'
